Main titles and Pictures

--- a/index.html
+++ b/index.html
@@ -5,17 +5,37 @@
     <title>Hieroglyphics</title>
     <link rel="stylesheet" href="style.css"/></head>
 <body>
-    <div class="first-background">
+    <div class="main-align">
         <h1>Introduction</h1>
-        <p>
-
-        </p>
-    </div>
-    <div>
-        <h1>Egyptian Hieroglyphs</h1>
-        <p>
-            
-        </p>
+        <h1>Definition</h1>
+        <h1>Different Types Of Hieroglyphs</h1>
+        <h2>Mesopotamian Hieroglyphics</h2>
+        <h3>Egyptian Hieroglyphics</h3>
+            <p><img src="pics/egypt-hieroglyphics.jpg" alt="Egyptian Hieroglyphics">
+            </p>
+        <h3>Cretan Hieroglyphics</h3>
+            <p><img src="pics/cretan-hieroglyphics.jpg" alt="Cretan Hieroglyphics">
+            </p>
+        <h3>Anatolian Hieroglyphics</h3>
+            <p><img src="pics/anatolian-hieroglyphics.jpg" alt="Anatolian Hieroglyphics">
+            </p>
+        <h4>Hittite Hieroglyphics</h4>
+        <h2>Mesoamerican Hieroglyphics</h2>
+        <h3>Mayan Hieroglyphics</h3>
+            <p><img src="pics/mayan-hieroglyphics.jpg" alt="Mayan Hieroglyphics">
+            </p>
+        <h3>Aztec Hieroglyphics</h3>
+            <p><img src="pics/aztec-hieroglyphics.jpg" alt="Aztec Hieroglyphics">
+            </p>
+        <h3>Mixtec Hieroglyphics</h3>
+            <p><img src="pics/mixtec-hieroglyphics.jpg" alt="Mixtec Hieroglyphics">
+            </p>
+        <h3>Zapotec Hieroglyphics</h3>
+            <p><img src="pics/zapotec-hieroglyphics.jpg" alt="Zapotec Hieroglyphics">
+            </p>
+        <h2>Special case of Mi'kmaq Hieroglyphics</h2>
+            <p><img src="pics/mikmaq-hieroglyphics.jpg" alt="Mi'kmaq Hieroglyphics">
+            </p>
     </div>
 </body>
 </html>
