--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Hieroglyphics</title>
     <link rel="stylesheet" href="style.css"/></head>
 <body>
+    <div class="navbar">
+        <ul>
+            <li><a class="active" href="#introduction">Introduction</a></li>
+            <li><a href="#definiton">Definition</a></li>
+            <li><a href="#mesopotamian-hieroglyphics">Mesopotamian Hieroglyphics</a></li>
+            <li><a href="#mesoamerican-hieroglyphics">Mesoamerican Hieroglyphics</a></li>
+        </ul>
+    </div>
     <div class="main-align">
         <h1>Introduction</h1>
         <h1>Definition</h1>
