--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css"/>
     <title>Hieroglyphics</title>
-    <link rel="stylesheet" href="style.css"/></head>
+</head>
 <body>
-    <div class="navbar">
-        <ul>
-            <li><a class="active" href="#introduction">Introduction</a></li>
-            <li><a href="#definiton">Definition</a></li>
-            <li><a href="#mesopotamian-hieroglyphics">Mesopotamian Hieroglyphics</a></li>
-            <li><a href="#mesoamerican-hieroglyphics">Mesoamerican Hieroglyphics</a></li>
-        </ul>
+    <div id="nav">
+        <h1>Navigation</h1>
+        <p><a href="#introduction">Introduction</a></p>
+        <p><a href="#definition">Definition</a></p>
+        <p><a href="#mesopotamian-hieroglyphics">Mesopotamian Hieroglyphics</a></p>
+        <p><a href="#mesoamerican-hieroglyphics">Mesoamerican Hieroglyphics</a></p>
     </div>
-    <div class="main-align">
-        <h1>Introduction</h1>
-        <h1>Definition</h1>
-        <h1>Different Types Of Hieroglyphs</h1>
-        <h2>Mesopotamian Hieroglyphics</h2>
+    <div id="content">
+        <h1 id="introduction">Introduction</h1>
+        <h1 id="definition">Definition</h1>
+        <h1>Different Types Of Hieroglyphics</h1>
+        <h2 id="mesopotamian-hieroglyphics">Mesopotamian Hieroglyphics</h2>
         <h3>Egyptian Hieroglyphics</h3>
             <p><img src="pics/egypt-hieroglyphics.jpg" alt="Egyptian Hieroglyphics">
             </p>
@@ -28,7 +33,7 @@
             <p><img src="pics/anatolian-hieroglyphics.jpg" alt="Anatolian Hieroglyphics">
             </p>
         <h4>Hittite Hieroglyphics</h4>
-        <h2>Mesoamerican Hieroglyphics</h2>
+        <h2 id="mesoamerican-hieroglyphics">Mesoamerican Hieroglyphics</h2>
         <h3>Mayan Hieroglyphics</h3>
             <p><img src="pics/mayan-hieroglyphics.jpg" alt="Mayan Hieroglyphics">
             </p>
